--- a/index.html
+++ b/index.html
@@ -16,21 +16,16 @@
         <h3>Nuestros servicios web</h3>
 
       <ul>
-        <li><a href="#home">Pacientes</a></li>
-        <li><a href="#home">Profesional de la salud</a></li>
-        <li><a href="#home">Sobre nosotros</a></li>
-        <li><a href="#home">Administrador</a></li>
+        <li><a href="#parrafo_paciente">Pacientes</a></li>
+        <li><a href="#parrafo_profesional_salud">Profesional de la salud</a></li>
+        <li><a href="#parrafo_admin">Sobre nosotros</a></li>
+        <li><a href="#sobre_nosotros">Administrador</a></li>
       </ul>
       </div>
       <!-- parrafos principales -->
       <p>Visit la web de la clinica: <a href="https://www.mayoclinic.org/es" target="_blank" rel="noopener noreferrer"><strong>Clinica Mayo.</strong></a></p>
       <hr>
       <a href="https://www.mayoclinic.org/es" title="Visita la web de la clinica">Visita la web Clinica Mayo<br></a>
-      <hr>
-      <a href="#parrafo_paciente">Paciente 1</a>
-      <a href="#parrafo_profesional_salud">Profesional de la salud 2</a>
-      <a href="#parrafo_admin">Administrador 3</a>
-      <a href="#sobre_nosotros">Sobre nosotros 4</a>
       <hr>
       <a href="https://www.mayoclinic.org/es"><img src="img/home_3.png" alt="imagen del home cita medica 1"></a>
       <hr>
