--- a/index.html
+++ b/index.html
@@ -1,93 +1,161 @@
 <!DOCTYPE html>
-<html lang="es">
-  <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>CitaMedicasApp</title>
-      <link rel="icon" type="image/x-icon" href="img/icons8-tomar-una-decisión-100.png">
-      <link rel="stylesheet" href="styles/styles.css">
-  </head>
-  <body>
-    <main>
+<html lang="en">
 
-      <div class="header">
-        <h1>Software de citas medicas</h1>
-        <h2>Lista de servicios</h2>
-        <h3>Nuestros servicios web</h3>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="style/style.css">
+    <title>Document</title>
+</head>
 
-      <ul>
-        <li><a href="#parrafo_paciente">Pacientes</a></li>
-        <li><a href="#parrafo_profesional_salud">Profesional de la salud</a></li>
-        <li><a href="#parrafo_admin">Sobre nosotros</a></li>
-        <li><a href="#sobre_nosotros">Administrador</a></li>
-      </ul>
-      </div>
-      <!-- parrafos principales -->
-      <p>Visit la web de la clinica: <a href="https://www.mayoclinic.org/es" target="_blank" rel="noopener noreferrer"><strong>Clinica Mayo.</strong></a></p>
-      <hr>
-      <a href="https://www.mayoclinic.org/es" title="Visita la web de la clinica">Visita la web Clinica Mayo<br></a>
-      <hr>
-      <a href="https://www.mayoclinic.org/es"><img src="img/home_3.png" alt="imagen del home cita medica 1"></a>
-      <hr>
-      <h2 id="parrafo_paciente">paciente 1</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis labore soluta consequuntur, quisquam asperiores quos minima, quo praesentium molestias voluptatibus ab! Et culpa suscipit odit dolore nisi, incidunt pariatur itaque!</p>
-
-      <!--Formularios-->
-      <form action="">
-        <input type="text" placeholder="Nombres" required><br>
-        <input type="text" placeholder="Apellidos" required><br>
-
-        <!--Boton de enviar-->
-        <button type="submit">Enviar</button><br>
-
-        <!--Botones de Radio -->
-        <label for="aceptar terminos_for">
-          <input id="aceptar terminos_id" type="radio" value="aceptar terminos" name="aceptar"
-          checked>Aceptar terminos
-        </label>
-        <br>
-        <label for="no_aceptar_termino_for">
-          <input id="no_aceptar_termino_id"type="radio" value="no aceptar terminos"
-          name="aceptar">No aceptar terminos
-        </label>
-        <br>
-
-        <!--Casillas de verificación-->
-        <label for="Tiene cedula">
-          <input id="Tiene cedula" type="checkbox" name="propiedades"
-          checked>Tiene cedula
-        </label>
-        <br>
-        <label for="No tiene cedula">
-          <input id="No tiene cedula" type="checkbox" name="propiedades">
-          No tiene cedula
-        </label>
-        <br>
-      </form>
-      <hr>
-
-      <h2 id="parrafo_profesional_salud">Profesional de la salud 2</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus voluptates optio incidunt sequi fuga quidem? Incidunt veritatis consequatur, quas reiciendis, harum modi magnam non velit quasi, accusamus exercitationem est minima!</p>
-      <hr>
-
-      <h2 id="parrafo_admin">Administrador 3</h2>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus, corrupti ut ea dolorem et molestias, dolore quia dolores ex deleniti eaque veritatis voluptates adipisci voluptate cupiditate delectus pariatur. Dolorum, omnis!</p>
-      <hr>
-
-      <h2 id="sobre_nosotros">Sobre nosotros</h2>
-      <pre>
-      Lorem ipsum dolor sit
-      amet consectetur adipisicing
-      elit. Eum ipsa expedita exercitationem
-      perspiciatis recusandae magnam repudiandae nisi,
-      dolorum ipsum ullam sed excepturi,
-      sunt alias magni nobis voluptatibus. Tenetur, quisquam cumque.
-      </pre>
-      <hr>
-    </main>
-    <!--Footer-->
+<body>
+    <!-- /.navbar-collapse -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="img/ritmo-cardiaco.png" alt="Bootstrap" width="30" height="24">CitaMedicApp
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Iniciar Sesion</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Inscribirse</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Admin</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Pedir Cita</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!--Carousel-->
+    <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="img/c_1.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="img/c_2.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="img/c_3.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="img/c_4.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="img/c_5.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="img/c_6.png" class="d-block w-100" alt="...">
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+    <div class="container-fluid bg-light py-5 text-center">
+        <div class="row">
+            <div class="col-sm-6 col-md-4 col-lg-2">1</div>
+            <div class="col-sm-6 col-md-4 col-lg-2">1</div>
+            <div class="col-sm-6 col-md-4 col-lg-2">1</div>
+            <div class="col-sm-6 col-md-4 col-lg-2">1</div>
+            <div class="col-sm-6 col-md-4 col-lg-2">1</div>
+            <div class="col-sm-6 col-md-4 col-lg-2">1</div>
+        </div>
+    </div>
+    <div class="container">
+        <h2 class="text-center">ACERCA DE</h2>
+        <div class="row">
+            <div class="col">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo ullam et distinctio corporis
+                hic
+                obcaecati recusandae doloribus illo voluptas quia animi in dolorum libero beatae praesentium a, ex modi
+                voluptatem?</div>
+            <div class="col">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel sint pariatur sed harum
+                deserunt
+                maxime excepturi doloremque. Debitis officia itaque aperiam maxime quam voluptatibus dignissimos quasi?
+                Quaerat
+                error pariatur vel.</div>
+        </div>
+    </div>
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="img/cards_1.png" class="card-img-top" alt="...">
+                    <div class="card-body ">
+                        <h5 class="card-title">Medico General</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's
+                            content.</p>
+                        <a href="#" class="btn btn-primary">Informate</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="img/cards_2.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Psicología</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's
+                            content.</p>
+                        <a href="#" class="btn btn-primary">Informate</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="img/cards_3.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Psiquiatría</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's
+                            content.</p>
+                        <a href="#" class="btn btn-primary">Informate</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <footer>
-      <p><small>Derechos de Autor</small></p>
+        <div class="container-fluid bg-dark p-5 text-center mt-5">
+            <div class="row">
+                <div class="col"><a href="" class="text-decoration-none text-white">CitaMedicApp</a></div>
+                <div class="col"><a href="" class="text-decoration-none text-white"><i class="bi bi-facebook"></i></a>
+                </div>
+            </div>
+        </div>
     </footer>
-  </body>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
